--- a/react-project/src/Card.css
+++ b/react-project/src/Card.css
@@ -41,3 +41,25 @@
   text-align: center;
   border-radius: 8px;
 }
+
+.card-input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid gray;
+  border-radius: 8px;
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+.card-button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  background-color: #0069f2;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
+  cursor: pointer;
+}
